--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/karthik.jpeg" alt="no pic found">
+      <td><img src="Images/karthik.png" alt="no pic found">
       <h4><a href="ContactME.html">Contact Maadi</a><h4>
       </td>
       <td><h1>Karthik</h1>
